--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -10,8 +10,8 @@
     left: 0;
     background-color: var(--primery-text-color-teme-dark);
 
-    width: 100%;
-    // height: 100vw;
+    width: 100vw;
+    height: 100vh;
 
     overflow: auto;
 
