--- a/sass/layot/_header.scss
+++ b/sass/layot/_header.scss
@@ -35,8 +35,7 @@
 
         transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-        &:hover,
-        &:focus {
+        &:hover, &:focus {
             fill: var(--accent-color);
         }
     }
