--- a/css/main.css
+++ b/css/main.css
@@ -321,11 +321,16 @@ img {
   }
 }
 .contact-form-checkbox-wrapper {
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   display: flex;
   justify-content: center;
 }
 
+@media screen and (min-width: 480px) {
+  .contact-form-checkbox-wrapper {
+    margin-bottom: 30px;
+  }
+}
 .contact-form-checkbox-label {
   position: relative;
   font-style: normal;
@@ -394,7 +399,7 @@ img {
   }
 }
 .mobile-menu {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   background-color: var(--primery-text-color-teme-dark);
@@ -504,7 +509,7 @@ img {
   font-size: 14px;
   line-height: 1.18;
   letter-spacing: 0.02em;
-  color: var(--secondary-text-color-teme-light);
+  color: var(--secondary-text-color-teme-dark);
 }
 
 @media screen and (min-width: 480px) {
@@ -689,13 +694,13 @@ img {
 }
 @media screen and (min-width: 768px) {
   .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/Img-tablet.png");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/Img-desktop.png");
     background-size: contain;
   }
 }
 @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) and (min-width: 768px) {
   .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/Img-tablet-@2x.png");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/Img-desktop-@2x.png");
     background-size: contain;
   }
 }
@@ -1199,12 +1204,12 @@ img {
 @media screen and (min-width: 768px) {
   .project-filter {
     margin-bottom: 30px;
+    justify-content: center;
   }
 }
 @media screen and (min-width: 1200px) {
   .project-filter {
     margin-bottom: 50px;
-    justify-content: center;
   }
 }
 .projects-filter:not(:last-child) {
@@ -1277,11 +1282,12 @@ img {
 }
 @media screen and (min-width: 1200px) {
   .project-list-items {
-    flex-basis: calc((100% - 120px) / 4);
+    flex-basis: calc((100% - 90px) / 3);
   }
 }
 .project-list {
-  display: block;
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 100%;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1314,12 +1320,18 @@ img {
   padding: 62px 24px;
   font-style: normal;
   font-weight: 400;
-  font-size: 18px;
-  line-height: 1.56;
+  font-size: 14px;
+  line-height: 1.2;
   letter-spacing: 0.03em;
   color: var(--primery-text-color-teme-dark);
 }
 
+@media screen and (min-width: 480px) {
+  .project-text {
+    font-size: 18px;
+    line-height: 1.56;
+  }
+}
 .project-list-text {
   padding: 20px 24px;
   border: solid #eeeeee;
@@ -1327,8 +1339,8 @@ img {
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-  .project-list-text:first-child {
-    padding: 20px 24px 56px 24px;
+  .project-list-text {
+    flex-grow: 1;
   }
 }
 .project-item {
