--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -1,4 +1,3 @@
-// 0px - 767px
 .backdrop {
     position: fixed;
     top: 0;
@@ -24,8 +23,8 @@
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
 
-    width: 450px;
-    height: 608px;
+    width: 320px;
+    height: 538px;
     border-radius: 4px;
     background-color: var(--primery-text-color-teme-dark);
 
@@ -37,6 +36,7 @@
         transform: translate(-50%, -50%) scale(0.75);
     }
 }
+
 
 .modal-close-btn {
     position: absolute;
@@ -132,7 +132,7 @@
 
 .contact-form-message {
     width: 100%;
-    height: 120px;
+    height: 80px;
     margin-top: 4px;
     padding: 12px 16px;
 
@@ -154,15 +154,14 @@
 }
 
 .contact-form-checkbox-wrapper {
-    margin-bottom: 30px;
+    margin-bottom: 10px;
 
     display: flex;
     justify-content: center;
 }
 
 .contact-form-checkbox-label {
-    display: flex;
-    align-items: center;
+
     position: relative;
 
     font-style: normal;
@@ -225,15 +224,29 @@
     }
 }
 
-// 768px - 1199px
+// 480px +
+@media screen and (min-width: 480px) {
+    .modal {
+        width: 450px;
+        height: 608px;
+    }
+    .contact-form-message {
+        height: 120px;
+    }
+    .contact-form-checkbox-wrapper {
+    margin-bottom: 30px;
+    }
+    .contact-form-checkbox-label {
+        display: flex;
+        align-items: center;
+    }
+}
+
+// 768px +
 @media screen and (min-width: 768px) {
     .modal {
         width: 528px;
         height: 580px;
-        // transform: translate(-50%, -50%) scale(1);
-        // .backdrop.is-hidden & {
-        //     transform: translate(-50%, -50%) scale(0.75);
-        // }
     }
 }
 
